--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,10 @@ jobs:
   release_image:
     needs: release
     permissions:
-      contents: write
-      discussions: write
+      contents: read
       packages: write
-      pull-requests: read
+      id-token: write
+      attestations: write
     uses: github/ospo-reusable-workflows/.github/workflows/release-image.yaml@c180b53efa35b2c4a95f660be386790c50ce7151
     with:
       image-name: ${{ github.repository }}
