chore: try another
Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/.github/workflows/auto-labeler.yml
+++ b/.github/workflows/auto-labeler.yml
@@ -10,7 +10,7 @@ jobs:
   main:
     permissions:
       contents: write
-      pull-requests: write
+      actions: write
     uses: github/ospo-reusable-workflows/.github/workflows/auto-labeler.yaml@6d41e9f4a53f6273e8f278888d0afeec142761b9
     with:
       config-name: release-drafter.yml
